@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.963 2013/09/13 15:08:37 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.964 2013/09/14 19:00:10 mgorny Exp $
+
+  14 Sep 2013; Michał Górny <mgorny@gentoo.org> eutils.eclass:
+  Support EAPIs < 4 in einstalldocs properly.
 
   13 Sep 2013; Michał Górny <mgorny@gentoo.org> git-r3.eclass:
   Fail early on unreachable URLs. If ls-remote fails due to server being
